--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,16 @@ edition = "2024"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
+axum = { version = "0.7", features = ["ws", "macros"] }
+tower = "0.4"
+tower-http = { version = "0.5", features = ["cors", "trace"] }
+
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+serde_yaml = "0.9"
+
+futures-util = "0.3"
+
+
 bytes = "1"
 anyhow = "1.0.101"
