--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,6 @@ serde_json = "1"
 serde_yaml = "0.9"
 
 futures-util = "0.3"
-
-
+chrono = { version = "0.4", features = ["serde"] }
 bytes = "1"
 anyhow = "1.0.101"
