--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,11 +1,16 @@
 app:
   name: "kurt-mqtt-broker"
   env: "production"
-
+    
 http:
   enabled: true
   host: "0.0.0.0"
   port: 18085
+
+middleware:
+  model_path: config/model.conf
+  policy_path: config/policy.csv
+  secret: something-very-long-sercret
 
 mqtt:
   listeners:
@@ -14,28 +19,29 @@ mqtt:
       protocol: "tcp"
       host: "0.0.0.0"
       port: 1883
-      auth_type: "none"      # none | basic | jwt | mtls
+    
+    - name: "tcp-public-2"
+      protocol: "tcp"
+      host: "0.0.0.0"
+      port: 1884
 
     - name: "tls-secure"
       protocol: "tls"
       host: "0.0.0.0"
       port: 8883
-      auth_type: "mtls"
       tls:
         key: "/etc/certs/server.key"
-        ca: "/etc/certs/ca.crt"
+        cert: "/etc/certs/ca.crt"
 
     - name: "ws"
       protocol: "ws"
       host: "0.0.0.0"
       port: 8083
-      auth_type: "jwt"
 
     - name: "wss"
       protocol: "wss"
       host: "0.0.0.0"
       port: 8084
-      auth_type: "jwt"
       tls:
         cert: "/etc/certs/server.crt"
         key: "/etc/certs/server.key"
