--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,6 @@ edition = "2024"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
-tokio-util = "0.7"
 axum = { version = "0.7", features = ["ws", "macros"] }
 tower = "0.4"
 tower-http = { version = "0.5", features = ["cors", "trace"] }
@@ -20,6 +19,9 @@ bytes = "1"
 anyhow = "1.0.101"
 
 dashmap = "5"
+
+redb = "2"
+bincode = "1"
 
 jsonwebtoken = "9"
 casbin = "2.20.0"
